// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Table card carousel 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c6 {
  text-transform: uppercase;
  font-weight: 600;
  text-align: left;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-right: 8px;
}

.c6:empty {
  display: none;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: right;
  overflow-wrap: break-word;
  word-wrap: break-word;
  min-width: 20%;
}

.c8:only-child,
.c5:empty + .c8 {
  text-align: center;
}

.c5:not(:empty) + .c7 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c3 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 240px;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: border-box;
  padding: 8px 16px;
}

.c4.c4:nth-of-type(even) {
  background-color: hsl(200,29%,90%);
}

.c4.c4:last-child {
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}

.c2.c2.c2.c2.c2 th,
.c2.c2.c2.c2.c2 td {
  text-transform: uppercase;
  border: 1px solid hsl(200,96%,11%);
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
}

.c2 tr {
  position: absolute;
  top: auto;
  left: -10000px;
}

.c1 {
  color: hsl(200,10%,20%);
  font-size: 12.5px;
  line-height: 1.44;
  overflow-wrap: break-word;
}

.c1 th {
  font-weight: 600;
}

.c1,
.c1 thead,
.c1 tbody,
.c1 tfoot {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 tr {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  min-width: 240px;
  max-width: 360px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  background-color: hsl(0,0%,100%);
  border: 1px solid hsl(200,29%,90%);
  border-radius: 4px;
  margin: 4px;
  outline: 0;
}

.c1 tr:focus {
  border-color: hsl(200,96%,35%);
}

.c1 th,
.c1 td {
  display: block;
  text-align: center;
  max-width: 100%;
  padding: 8px 16px;
}

.c1 th:nth-of-type(even),
.c1 td:nth-of-type(even) {
  background-color: hsl(200,29%,90%);
}

.c1 th:last-child,
.c1 td:last-child {
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}

@media screen and (min-width:1200px) {
  .c3 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c3 {
    min-width: 160px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 12.5px;
    line-height: 1.44;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <thead
        class="c2"
      >
        <tr>
          <th
            class="c3"
          >
            Header Cell
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          tabindex="0"
        >
          <td
            class="c4"
            style="min-height: 16px;"
          >
            <div
              aria-hidden="true"
              class="c5 c6"
            >
              Header Cell
            </div>
            <div
              class="c7 c8"
            >
              Data cell
            </div>
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c4"
            style="min-height: 16px;"
          >
            <div
              aria-hidden="true"
              class="c5 c6"
            >
              Header Cell
            </div>
            <div
              class="c7 c8"
            >
              Data cell
            </div>
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c4"
            style="min-height: 16px;"
          >
            <div
              aria-hidden="true"
              class="c5 c6"
            >
              Header Cell
            </div>
            <div
              class="c7 c8"
            >
              Data cell
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`component: Table regular table 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c3 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c2.c2.c2.c2.c2 th,
.c2.c2.c2.c2.c2 td {
  text-transform: uppercase;
  border: 1px solid hsl(200,96%,11%);
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
}

.c1 {
  color: hsl(200,10%,20%);
  display: table;
  font-size: 18px;
  line-height: 1.5;
  border-spacing: 0;
}

.c1 th {
  font-weight: 600;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:hover td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus th,
.c1.c1.c1 tr:focus td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
  background-color: hsla(200,96%,35%,0.3);
}

.c1.c1.c1 tr:focus td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 4px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 4px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 4px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 4px;
}

@media screen and (min-width:1200px) {
  .c3 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c3 {
    min-width: 160px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <thead
        class="c2"
      >
        <tr>
          <th
            class="c3"
          >
            Header Cell
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`component: Table table with caption 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c3 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c2.c2.c2.c2.c2 th,
.c2.c2.c2.c2.c2 td {
  text-transform: uppercase;
  border: 1px solid hsl(200,96%,11%);
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
}

.c1 {
  color: hsl(200,10%,20%);
  display: table;
  font-size: 18px;
  line-height: 1.5;
  border-spacing: 0;
}

.c1 th {
  font-weight: 600;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:hover td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus th,
.c1.c1.c1 tr:focus td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
  background-color: hsla(200,96%,35%,0.3);
}

.c1.c1.c1 tr:focus td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 4px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 4px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 4px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 4px;
}

@media screen and (min-width:1200px) {
  .c3 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c3 {
    min-width: 160px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <caption>
        I'm a caption
      </caption>
      <thead
        class="c2"
      >
        <tr>
          <th
            class="c3"
          >
            Header Cell
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`component: Table table with no header 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c2 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c1 {
  color: hsl(200,10%,20%);
  display: table;
  font-size: 18px;
  line-height: 1.5;
  border-spacing: 0;
}

.c1 th {
  font-weight: 600;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:hover td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus th,
.c1.c1.c1 tr:focus td {
  border-left-color: hsl(200,96%,35%);
  border-top-color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
  background-color: hsla(200,96%,35%,0.3);
}

.c1.c1.c1 tr:focus td:last-child {
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 4px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 4px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 4px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 4px;
}

@media screen and (min-width:1200px) {
  .c2 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c2 {
    min-width: 160px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody>
        <tr
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
        <tr
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
